Updated documentation and example template

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,17 +1,24 @@
-0.2.0 Modifications for preview feature of STW
+0.2.0 2011-Apr-22 Modifications for preview feature of STW
 
-- shrinkthewebimage template tag is NOT backward compatible with version 0.0.1.
-The alt argument is no longer accepted.
-- shrinkthewebimage template tag is now designed for use by free accounts, it
-adds the required preview feature. It can also be used by PRO accounts wanting
-the preview functionality. The tag now accepts key-value arguments in the same
-manner as the stwimage tag.
-- stwimage can now only be used for PRO features.
-- template tags now throw exceptions in their constructors instead of in the render
-function so configuration errors are visible during development.
+Changes to the shrinkthewebimage template tag:
+- The shrinkthewebimage template tag is NOT backward compatible with version
+0.0.1. The alt argument is no longer accepted.
+- The shrinkthewebimage template tag is now intended for use by free accounts,
+it adds the required preview feature. It can also be used by PRO account users
+wanting the preview functionality.
+- The shrinkthewebimage template tag now accepts PRO key-value arguments
+in the same manner as the stwimage tag. This functionality is shown in the
+example template but may not yet be fully implemented by the STW web service.
+
+Changes to the stwimage template tag:
+- The stwimage can now only be used for PRO features.
+
+Common changes:
+- Template tags now throw exceptions in their constructors instead of in the
+render function so configuration errors are visible during development.
 - django-stw defines a key 'lang' for the SHRINK_THE_WEB dictionary that
 can be passed along as a default to the preview tag. Alternately a 'lang'
 keyword can be supplied in each template tag invocation. django-stw defaults it
-to 'en'.
+to 'en'. This functionality is not yet implemented by the STW web service.
 
 0.0.1 Initial release
